[package]
name = "leptos_axum"
version = "1.0.0"
edition = "2021"
authors = ["Greg Johnston"]
license = "MIT"
repository = "https://github.com/leptos-rs/leptos"
description = "Axum integrations for the Leptos web framework."

[dependencies]
axum = { version = "=0.6.16", features = ["macros"], default-features = false }
futures = "0.3"
http = "0.2.8"
# hyper = { version = "0.14.24", default-features = false }
hyper = { version = "=0.14.24", default-features = false, features = ["stream", "http1", "tcp", "server"] }
# tokio = { version = "1.24.2", git = "https://github.com/john-sharratt/tokio.git", branch = "wasix-1.24.2", features = ["rt", "fs"] }
# tokio-util = {version = "=0.7.3", features = ["rt"], git = "https://github.com/john-sharratt/tokio.git", branch = "wasix-1.24.2" }
tokio = { version = "=1.24.2", features = ["rt", "fs"], path = "../../../../john-sharratt/tokio/tokio" }
tokio-util = {version = "=0.7.3", features = ["rt"],  path = "../../../../john-sharratt/tokio/tokio-util" }

leptos = { path = "../../leptos", default-features = false, features = ["ssr"] }
leptos_meta = { path = "../../meta", features = ["ssr"] }
leptos_dom = { path = "../../leptos_dom", default-features = false, features = ["ssr"] }
leptos_router = { path = "../../router", features = ["ssr"] }
leptos_integration_utils = { path = "../utils" }
serde_json = "1"
# # tokio = { version = "1", features = ["full"] }
parking_lot = "0.12.1"
once_cell = "1.17"
socket2 = "=0.4.7"

[patch.crates-io]
socket2 = { git = "https://github.com/john-sharratt/socket2.git", branch = "v0.4.7" }
libc = { git = "https://github.com/john-sharratt/libc.git" }
# tokio = { git = "https://github.com/john-sharratt/tokio.git", branch = "wasix-1.24.2" }
# tokio-util = { git = "https://github.com/john-sharratt/tokio.git", branch = "wasix-1.24.2" , features = ["rt"] }
tokio = { version = "=1.24.2", path = "../../../../john-sharratt/tokio/tokio" }
tokio-util = {version = "=0.7.3", path = "../../../../john-sharratt/tokio/tokio-util" }
syn-rsx = { path = "../../../../stoically/syn-rsx" }
proc-macro-error = { path = "../../../../CreepySkeleton/proc-macro-error" }
# hyper = { path = "../../hyperium/hyper" }
